[tool.poetry]
name = "fio-wrapper"
version = "0.0.0"
description = "Python API wrapper for Prosperous Universes community API FIO."
authors = ["Jan <jplacht+pyfio@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://jplacht.github.io/fio_wrapper/"
documentation = "https://jplacht.github.io/fio_wrapper/"
repository = "https://github.com/jplacht/fio_wrapper"
keywords = ["fio", "prosperous universe", "api", "wrapper"]

include = [
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
pydantic = "^2.4.2"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
urllib3 = "^2.0.7"
requests-mock = "^1.11.0"
black = "^23.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}
mkdocs-material = "^9.4.7"
mkdocs-coverage = "^1.0.0"
