[tool.poetry]
name = "fio-wrapper"
version = "0.0.0"
description = "Python API wrapper for Prosperous Universes community API FIO."
authors = ["Jan <jplacht+pyfio@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["fio", "prosperous universe", "api", "wrapper"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Topic :: Internet",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

include = [
    "LICENSE",
    "README.md",
    "CONTRIBUTING.md"
]

[tool.poetry.urls]
Homepage = "https://jplacht.github.io/fio_wrapper/"
Documentation = "https://jplacht.github.io/fio_wrapper/"
Source = "https://github.com/jplacht/fio_wrapper"
Repository = "https://github.com/jplacht/fio_wrapper"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
pydantic = "^2.4.2"
pyyaml = "^6.0.1"
requests-cache = {extras = ["cache"], version = "^1.1.0", optional=true}

[tool.poetry.dev-dependencies]
black = "^23.10.1"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
requests-mock = "^1.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}
mkdocs-material = "^9.4.7"
mkdocs-coverage = "^1.0.0"

[tool.poetry.extras]
cache = ["requests-cache"]